[gd_scene load_steps=89 format=3 uid="uid://dx3iwl022t7t3"]

[ext_resource type="Script" path="res://PrideChar/pride_char.gd" id="1_ljo2m"]
[ext_resource type="Texture2D" uid="uid://djceei7qot2lg" path="res://Elementals_fire_knight_FREE_v1.1/spritesheets/fire_FREE_SpriteSheet_288x128.png" id="1_wimre"]
[ext_resource type="PackedScene" uid="uid://by4x5yirhb245" path="res://components/HUD/player_hud.tscn" id="2_r8qon"]
[ext_resource type="AudioStream" uid="uid://mmv6dsqkk8ej" path="res://sounds/eff/12_Player_Movement_SFX/03_Step_grass_03.wav" id="3_7n8ix"]
[ext_resource type="Script" path="res://components/HealthComponent.gd" id="5_qfgg7"]
[ext_resource type="Script" path="res://components/HitboxComponent.gd" id="6_eshru"]
[ext_resource type="PackedScene" uid="uid://bmx6k0bfil03x" path="res://enemy/damage/damage_label.tscn" id="7_61g4g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y1vdy"]
radius = 11.0
height = 44.0

[sub_resource type="AtlasTexture" id="AtlasTexture_33trf"]
atlas = ExtResource("1_wimre")
region = Rect2(0, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvd1h"]
atlas = ExtResource("1_wimre")
region = Rect2(288, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5j4e"]
atlas = ExtResource("1_wimre")
region = Rect2(576, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_snj4r"]
atlas = ExtResource("1_wimre")
region = Rect2(864, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp81h"]
atlas = ExtResource("1_wimre")
region = Rect2(1152, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx4y2"]
atlas = ExtResource("1_wimre")
region = Rect2(1440, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdg3p"]
atlas = ExtResource("1_wimre")
region = Rect2(1728, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvc8x"]
atlas = ExtResource("1_wimre")
region = Rect2(2016, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1yrv"]
atlas = ExtResource("1_wimre")
region = Rect2(2304, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch263"]
atlas = ExtResource("1_wimre")
region = Rect2(2592, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3prt"]
atlas = ExtResource("1_wimre")
region = Rect2(2880, 896, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmvtc"]
atlas = ExtResource("1_wimre")
region = Rect2(0, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1hni"]
atlas = ExtResource("1_wimre")
region = Rect2(288, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_43jji"]
atlas = ExtResource("1_wimre")
region = Rect2(576, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1wdb"]
atlas = ExtResource("1_wimre")
region = Rect2(864, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5mgr"]
atlas = ExtResource("1_wimre")
region = Rect2(1152, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_478c2"]
atlas = ExtResource("1_wimre")
region = Rect2(1440, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_thu1m"]
atlas = ExtResource("1_wimre")
region = Rect2(1728, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5km8x"]
atlas = ExtResource("1_wimre")
region = Rect2(2016, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i435n"]
atlas = ExtResource("1_wimre")
region = Rect2(1728, 0, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbvfa"]
atlas = ExtResource("1_wimre")
region = Rect2(0, 256, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwou3"]
atlas = ExtResource("1_wimre")
region = Rect2(288, 256, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p4uw"]
atlas = ExtResource("1_wimre")
region = Rect2(576, 256, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d47y5"]
atlas = ExtResource("1_wimre")
region = Rect2(0, 384, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fftqj"]
atlas = ExtResource("1_wimre")
region = Rect2(288, 384, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbaeo"]
atlas = ExtResource("1_wimre")
region = Rect2(576, 384, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2rji"]
atlas = ExtResource("1_wimre")
region = Rect2(0, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ayiw"]
atlas = ExtResource("1_wimre")
region = Rect2(288, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ynf7"]
atlas = ExtResource("1_wimre")
region = Rect2(576, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv85i"]
atlas = ExtResource("1_wimre")
region = Rect2(864, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyon7"]
atlas = ExtResource("1_wimre")
region = Rect2(1152, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_skebe"]
atlas = ExtResource("1_wimre")
region = Rect2(1440, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_etubp"]
atlas = ExtResource("1_wimre")
region = Rect2(1728, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dykhd"]
atlas = ExtResource("1_wimre")
region = Rect2(2016, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4lvp"]
atlas = ExtResource("1_wimre")
region = Rect2(0, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yy5n"]
atlas = ExtResource("1_wimre")
region = Rect2(288, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_55onw"]
atlas = ExtResource("1_wimre")
region = Rect2(576, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcnph"]
atlas = ExtResource("1_wimre")
region = Rect2(864, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_abtdu"]
atlas = ExtResource("1_wimre")
region = Rect2(1152, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pseny"]
atlas = ExtResource("1_wimre")
region = Rect2(1440, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuph0"]
atlas = ExtResource("1_wimre")
region = Rect2(1728, 128, 288, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_raref"]
atlas = ExtResource("1_wimre")
region = Rect2(2016, 128, 288, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_1x1pp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33trf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvd1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5j4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snj4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp81h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx4y2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdg3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvc8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1yrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch263")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3prt")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmvtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1hni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43jji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1wdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5mgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_478c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thu1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5km8x")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i435n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbvfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwou3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p4uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d47y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fftqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbaeo")
}],
"loop": false,
"name": &"jump",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2rji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ayiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ynf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv85i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyon7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skebe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etubp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dykhd")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4lvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yy5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55onw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcnph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abtdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pseny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuph0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raref")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_ab0hn"]
length = 0.733333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack"]
}

[sub_resource type="Animation" id="Animation_4uxor"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}

[sub_resource type="Animation" id="Animation_sgii7"]
length = 0.538462
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["jump"]
}

[sub_resource type="Animation" id="Animation_1nncq"]
length = 0.533333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}

[sub_resource type="Animation" id="Animation_10y0t"]
length = 1.14286
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjgi6"]
_data = {
"attack": SubResource("Animation_ab0hn"),
"idle": SubResource("Animation_4uxor"),
"jump": SubResource("Animation_sgii7"),
"run": SubResource("Animation_1nncq"),
"walk": SubResource("Animation_10y0t")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_omca4"]
animation = &"attack"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_fcr7w"]
blend_point_0/node = SubResource("AnimationNodeAnimation_omca4")
blend_point_0/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2xjtf"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ajl6s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2xjtf")
blend_point_0/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qxebi"]
animation = &"jump"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0x1kt"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qxebi")
blend_point_0/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bbt66"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_r8b1v"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bbt66")
blend_point_0/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qvxri"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_d1om6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qvxri")
blend_point_0/pos = Vector2(0, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t5on0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cm8ne"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aii6o"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vpb54"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2iqgj"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qdo0r"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qgpe5"]
switch_mode = 2
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b3b0g"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fv7aq"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v8r3w"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mh41e"]
switch_mode = 2
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4t3fq"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ukc7c"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v5vv6"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_56lsm"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7x6cd"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rc3es"]
switch_mode = 2
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sfd1r"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_druay"]
switch_mode = 2
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_udyia"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_fcr7w")
states/Attack/position = Vector2(472, 279)
states/End/position = Vector2(1101, 107)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_ajl6s")
states/Idle/position = Vector2(336, 100)
states/Jump/node = SubResource("AnimationNodeBlendSpace2D_0x1kt")
states/Jump/position = Vector2(472, 18)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_r8b1v")
states/Run/position = Vector2(472, 167)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_d1om6")
states/Walk/position = Vector2(619, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_t5on0"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_cm8ne"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_aii6o"), "Walk", "Run", SubResource("AnimationNodeStateMachineTransition_vpb54"), "Run", "Walk", SubResource("AnimationNodeStateMachineTransition_2iqgj"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_qdo0r"), "Jump", "Walk", SubResource("AnimationNodeStateMachineTransition_qgpe5"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_b3b0g"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_fv7aq"), "Run", "Jump", SubResource("AnimationNodeStateMachineTransition_v8r3w"), "Jump", "Run", SubResource("AnimationNodeStateMachineTransition_mh41e"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_4t3fq"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_ukc7c"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_v5vv6"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_56lsm"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_7x6cd"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_rc3es"), "Run", "Attack", SubResource("AnimationNodeStateMachineTransition_sfd1r"), "Attack", "Run", SubResource("AnimationNodeStateMachineTransition_druay")]
graph_offset = Vector2(-14, 100)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xi7og"]
radius = 11.0
height = 44.0

[node name="PrideChar" type="CharacterBody2D" groups=["Player", "PrideChar"]]
script = ExtResource("1_ljo2m")

[node name="Player_HUD" parent="." node_paths=PackedStringArray("health_component", "player") instance=ExtResource("2_r8qon")]
health_component = NodePath("../HealthComponent")
player = NodePath("..")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.4, 2.4)
limit_left = 0
limit_right = 5000
limit_bottom = 645

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_y1vdy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -42)
sprite_frames = SubResource("SpriteFrames_1x1pp")
animation = &"jump"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xjgi6")
}

[node name="FootStepASP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7n8ix")
volume_db = -25.0

[node name="StateLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -48.0
offset_right = 20.0
offset_bottom = -25.0

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_udyia")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/idle = false
parameters/conditions/jump = false
parameters/conditions/run = false
parameters/conditions/walk = false
parameters/Attack/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Jump/blend_position = Vector2(0, 0)
parameters/Run/blend_position = Vector2(-1, 1)
parameters/Walk/blend_position = Vector2(-1, 1)

[node name="TimerStep" type="Timer" parent="."]

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("5_qfgg7")
MAX_HEALTH = 150

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "damage_label")]
script = ExtResource("6_eshru")
health_component = NodePath("../HealthComponent")
damage_label = NodePath("../DamageLabel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_xi7og")

[node name="DamageLabel" parent="." instance=ExtResource("7_61g4g")]
